<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="lite_app_name">GO23 Wallet</string>

    <string name="lite_user_info_tips">User info does not exist</string>
    <string name="lite_unique_tips">Unique id does not exist</string>
    <string name="lite_email_phone_tips">Email or phone number does not exist</string>

    <string name="lite_network_error">Network error</string>

    <string name="lite_total_balance">Total Balance</string>
    <string name="lite_receive">Receive</string>
    <string name="lite_send">Send</string>

    <string name="lite_tokens">Tokens</string>
    <string name="lite_nfts">NFTs</string>
    <string name="lite_setting">Setting</string>
    <string name="lite_successful">Successful</string>
    <string name="lite_resharding">Reshard Private Key</string>
    <string name="lite_recover_wallet">Recover Wallet</string>
    <string name="lite_email">Email</string>
    <string name="lite_sms">SMS</string>
    <string name="lite_pin_code">PIN code</string>
    <string name="lite_pin_code_error">PIN code Error</string>
    <string name="lite_verify_count">Verify your account</string>
    <string name="lite_verify">Verify</string>
    <string name="lite_confirm">Confirm</string>
    <string name="lite_ok">OK</string>
    <string name="lite_cancel">Cancel</string>
    <string name="lite_forget_psw">Forget Pincode</string>
    <string name="lite_send_code">Send verification %s</string>
    <string name="lite_send_code_fail">Sending failed, please try again</string>
    <string name="lite_has_send_tips">Enter the 6-digit code sent to your %s.</string>
    <string name="lite_sending">Sending， please wait</string>
    <string name="lite_verifying">Verifying， please wait</string>
    <string name="lite_verify_error">Verify code is error, please check it</string>
    <string name="lite_confirm_error">The two pincode are different, please check it</string>
    <string name="lite_dont_receive">Didn\'t receive it?</string>
    <string name="lite_resend">Resend</string>
    <string name="lite_login_in">Login in</string>
    <string name="lite_search_country">Search country</string>
    <string name="lite_default_country_code">+86</string>
    <string name="lite_set_pin_code">Set Pincode</string>
    <string name="lite_confirm_pin_code">Confirm Pincode</string>
    <string name="lite_set_pin_code_tips">Please enter 8 characters including letters, numbers and special characters</string>

    <string name="lite_start_reshard">Start to reshard private key</string>
    <string name="lite_loading">Loading…</string>
    <string name="lite_resharding_loading">Resharding, please wait</string>
    <string name="lite_resharding_fail">Resharding fail, please retry</string>
    <string name="lite_send_error">Send error, please retry</string>
    <string name="lite_verify_code">Verification code</string>
    <string name="lite_email_input_error">Email input error</string>
    <string name="lite_sms_input_error">SMS input error</string>
    <string name="lite_verify_code_sent">Verification code has been sent</string>
    <string name="lite_verify_code_fail">Verification code error, please reenter</string>

    <string name="lite_choose_mainnet">Choose Mainnets</string>

    <string name="lite_copy_success">Copied</string>
    <string name="lite_paste_error">Paste Error</string>
    <string name="lite_receive_tips">Scan the QR code to pay \n Mainnet ERC-20</string>
    <string name="lite_receive_qrcode_tips">This address only accepts tokens from \n%s. Do not send from other Mainnets.</string>

    <string name="lite_type_all">All</string>
    <string name="lite_type_out">Out</string>
    <string name="lite_type_in">In</string>
    <string name="lite_failed">Failed</string>

    <string name="lite_details">Details</string>
    <string name="lite_send_nft">Send NFT</string>
    <string name="lite_processing">Processing…</string>
    <string name="lite_from">From</string>
    <string name="lite_to">To</string>
    <string name="lite_txID">TxID</string>
    <string name="lite_network">Network</string>
    <string name="lite_amount">Amount</string>
    <string name="lite_gas">Gas</string>
    <string name="lite_quantity">Quantity</string>
    <string name="lite_quantity_hint">Input Quantity</string>
    <string name="lite_gas_free">Gas Fee</string>
    <string name="lite_lending_gas_free">Equivalent Gas Fee</string>
    <string name="lite_total">Total</string>
    <string name="lite_change_asset">Change Asset</string>

    <string name="lite_description">Description</string>
    <string name="lite_attributes">Attributes</string>
    <string name="lite_contract">Contract</string>
    <string name="lite_contract_address">Contract address</string>
    <string name="lite_blockchain">Blockchain</string>
    <string name="lite_website">Website</string>
    <string name="lite_token_standard">Token Standard</string>
    <string name="lite_nft_own_num_tips">You own %d</string>
    <string name="lite_amount_own">Amount Owned:%d</string>
    <string name="lite_transfer">Transfer</string>
    <string name="lite_paste">Paste</string>
    <string name="lite_receiving_address">Receiving Address</string>
    <string name="lite_token_id">TokenID</string>
    <string name="lite_token_id_content">Token ID:</string>
    <string name="lite_value">Value</string>
    <string name="lite_transaction_result">Transaction Result</string>
    <string name="lite_go_it">GO it</string>
    <string name="lite_album">Album</string>
    <string name="lite_qrcode">QR code</string>
    <string name="lite_scan_qrcode">Scan QR-CODE</string>
    <string name="lite_request_camera_permission_fail">Failed to obtain camera permission</string>

    <string name="lite_import_str">Import</string>
    <string name="lite_import_asset">Import assets</string>
    <string name="lite_import_nfts">Import NFTs</string>
    <string name="lite_add_a_token">Add a Token</string>
    <string name="lite_add_custom_token">Add Custom Token</string>
    <string name="lite_nft_contact_address">NFT Contract Address</string>
    <string name="lite_add_token_warning">Anyone can create a fake token. Make sure you trust a token before you import it.</string>
    <string name="lite_token_contract">Token Contract Address</string>
    <string name="lite_token_symbol">Token Symbol</string>
    <string name="lite_token_precision">Token Decimal</string>
    <string name="lite_send_available">Available: %s</string>
    <string name="lite_all">All</string>

    <string name="lite_select_token_send">Select token to send</string>
    <string name="lite_confirm_transfer">Confirm Transfer</string>
    <string name="lite_request_sent">Request is sent</string>
    <string name="lite_pending_block_validation">Pending block validation…</string>
    <string name="lite_view_details">View Details</string>
    <string name="lite_not_support_tips"><![CDATA[ <font color="#00D6E1">%s</font> doesn’t support lending gas to users for transaction.]]></string>
    <string name="lite_gas_tips"><![CDATA[ <font color="#00D6E1">%s</font> support lending gas to users for trading]]></string>
    <string name="lite_min_tips"><![CDATA[ Minimum transfer amount <font color="#00D6E1">%s</font> %s]]></string>
    <string name="lite_gas_insufficient">Insufficient Gas Fee</string>
    <string name="lite_quantity_exceed">Exceed the maximum number of NFT</string>
    <string name="lite_balance_insufficient">Insufficient balance</string>
    <string name="lite_input_amount">Enter Amount</string>

    <string name="lite_add_success">Add Successfully</string>
    <string name="lite_add_fail">Add Fail</string>
    <string name="lite_transaction_failed">Transaction failed</string>
    <string name="lite_remove_success">Remove Success</string>

    <string name="lite_switch_chain_fail">Failed to switch chain</string>
    <string name="lite_empty_tips">No Records</string>
    <string name="lite_empty_transaction_tips">No transaction records</string>
</resources>