<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_top_r12_white"
    android:paddingBottom="36dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/lite_confirm_transfer"
        android:textColor="@color/color_262626"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/icon_close"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/color_F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_transfer"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_transfer_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_transfer_small"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/icon_transfer_small"
        app:layout_constraintBottom_toBottomOf="@id/iv_transfer"
        app:layout_constraintEnd_toEndOf="@id/iv_transfer"
        app:layout_constraintStart_toEndOf="@id/iv_transfer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_send_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_262626"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_transfer"
        tools:text="asdasda" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_contact_content"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lite_contract"
        android:textColor="@color/color_8C8C8C"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_send_num" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_contact_content"
        app:layout_constraintTop_toTopOf="@id/tv_contact_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_from_content"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lite_from"
        android:textColor="@color/color_8C8C8C"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contact" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_from_content"
        app:layout_constraintTop_toTopOf="@id/tv_from_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_to_content"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lite_to"
        android:textColor="@color/color_8C8C8C"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_from" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_to_content"
        app:layout_constraintTop_toTopOf="@id/tv_to_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value_content"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lite_value"
        android:textColor="@color/color_8C8C8C"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_to" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_value_content"
        app:layout_constraintTop_toTopOf="@id/tv_value_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_gas_free_content"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lite_gas_free"
        android:textColor="@color/color_8C8C8C"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_gas_free"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_gas_free_content"
        app:layout_constraintTop_toTopOf="@id/tv_gas_free_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_gas_free_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_595959"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_gas_free"
        app:layout_constraintTop_toBottomOf="@id/tv_gas_free" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/shape_r8_00d6e1_border"
        android:gravity="center"
        android:text="@string/lite_cancel"
        android:textColor="@color/color_00D6E1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirm"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/shape_r8_00d6e1_bg"
        android:gravity="center"
        android:text="@string/lite_confirm"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>